# IRC

./: .gitignore  CMakeLists.txt  ClassDiagram.md  Makefile  Readme.md  SequenceDiagram.md  ircserv  irssi.md  test_irc
.github/workflows/: ci.yml
DOCS/: ClassDiagram.md  Flow.md  SequenceDiagram.md
incs/: ACommand.hpp  Channel.hpp  ChannelList.hpp  Client.hpp  ClientList.hpp  Macro.hpp  Nick.hpp  Parser.hpp  Pass.hpp  Server.hpp  Status.hpp  User.hpp
srcs/: config.hpp  irc_replies.hpp  macro.hpp  main.cpp
srcs/Command/: ABuiltin.cpp  ABuiltin.hpp  ACommand.hpp
srcs/Controller/: Controller.cpp  Controller.hpp  Parser.cpp  Parser.hpp  parse.cpp  util.cpp
srcs/DTO/: Error.hpp  IBody.hpp  ReplyCode.hpp  RequestBody.hpp  ResponseBody.cpp  ResponseBody.hpp
srcs/Model/: Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  ClientChannelHub.cpp  ClientChannelHub.hpp  Model.cpp  Model.hpp  util.cpp
srcs/Server/: Server.cpp  util.cpp
srcs/channel/: Channel.hpp  ChannelList.hpp
srcs/client/: Client.hpp  ClientList.hpp
srcs/command/: ABuiltin.cpp  ABuiltin.hpp  ACommand.cpp  ACommand.hpp  ACommandBase.cpp  ACommandBase.hpp  Invite.cpp  Invite.hpp  Join.cpp  Join.hpp  Kick.cpp  Kick.hpp  Mode.cpp  Mode.hpp  Nick.cpp  Nick.hpp  Part.cpp  Part.hpp  Pass.cpp  Pass.hpp  PrivMsg.cpp  PrivMsg.hpp  Quit.cpp  Quit.hpp  Topic.cpp  Topic.hpp  User.cpp  User.hpp  Who.cpp  Who.hpp
srcs/parser/: Parser.hpp
srcs/server/: PipeHandler.hpp  Server.cpp  Server.hpp  util.cpp
test/: Model_test.cpp  Server_test.cpp  test_argument.cpp
test/command/: CommandTestBase.hpp  (+4 more)
(+55 files in other folders)
